--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/imagedrink"/>
+                            android:src="@drawable/bgprofiluser" />
                     </androidx.cardview.widget.CardView>
                     <LinearLayout
                         android:layout_width="0dp"
