--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -44,6 +44,7 @@
                 android:textSize="@dimen/lp.ukuranteksinput" />
         </com.google.android.material.textfield.TextInputLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/consoption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
@@ -97,15 +98,77 @@
                 android:text="Hapus Filter"
                 android:textSize="@dimen/hp.ukuranteksinfo"
                 android:textColor="@color/red"/>
+            <TextView
+                android:id="@+id/friwxbtnrefresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="8dp"
+                android:text="Segarkan"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/red"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/consstatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/driwxcardleft"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/driwxcardright"
+                app:layout_constraintBottom_toBottomOf="@+id/dpxview1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:gravity="center"
+                    android:text="Riwayat Pembelian"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/inter_regular"/>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/driwxcardright"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/driwxcardleft"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/dpxview1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:gravity="center"
+                    android:text="Dalam Antrian"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/inter_regular"/>
+            </androidx.cardview.widget.CardView>
+            <View
+                android:id="@+id/dpxview1"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                app:layout_constraintTop_toBottomOf="@id/driwxcardleft"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="#bdbdbd" />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/friwxteksttriwayat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/fmakxconsspinner"
+            app:layout_constraintTop_toBottomOf="@id/consstatus"
             android:gravity="center"
             android:layout_marginVertical="20dp"
-            android:text="Riwayat Tidak Tersedia"
+            android:text="Riwayat Kosong"
             android:textSize="@dimen/fh.ukuranteksjudul"
             android:textStyle="bold"
             android:visibility="visible"/>
