--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,24 +125,34 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
-                <com.google.android.material.textfield.TextInputLayout
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/searchall"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     app:boxBackgroundMode="outline"
                     app:boxStrokeColor="@color/dark_blue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/fmakxinput"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cariii"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/searchgreyicon"
-                        android:drawablePadding="10dp"
-                        android:hint="Ketik nama menu..."
-                        android:inputType="text"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/dark_blue"
-                        android:textSize="@dimen/lp.ukuranteksinput" />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:layout_height="55dp"
+                        android:padding="10dp"
+                        android:background="@drawable/edittext_bg"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="5dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginLeft="5dp"
+                            android:drawableLeft="@drawable/searchgreyicon"
+                            android:text="Cari"
+                            android:textSize="15sp"
+                            android:drawablePadding="10dp"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
         </LinearLayout>
         <ScrollView
@@ -159,7 +169,8 @@
                     android:orientation="vertical">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:visibility="gone">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -196,7 +207,8 @@
                         android:visibility="gone"/>
                     <ScrollView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:visibility="gone">
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/hpxrvpromo"
                             android:layout_width="match_parent"
@@ -222,7 +234,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:layout_marginTop="@dimen/fh.margintekssubjudul"
                             android:layout_marginBottom="@dimen/fh.margintekssubjudul"
-                            android:text="Terakhir dibeli"
+                            android:text="Semua Menu"
                             android:textSize="@dimen/fh.ukurantekssubjudul"
                             android:textStyle="bold"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
