--- a/app/src/main/res/layout/fragment_lupa_password.xml
+++ b/app/src/main/res/layout/fragment_lupa_password.xml
@@ -68,24 +68,25 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Username"
-                        android:maxLength="20"
+                        android:maxLength="30"
                         android:inputType="textEmailAddress"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
                         android:textSize="@dimen/lp.ukuranteksinput" />
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <Button
                     android:id="@+id/lpassxbtnKirimemail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/dark_blue"
                     android:layout_gravity="right"
                     android:layout_marginHorizontal="10dp"
-                    android:paddingVertical="10dp"
+                    android:backgroundTint="@color/dark_blue"
                     android:paddingHorizontal="30dp"
+                    android:paddingVertical="10dp"
                     android:text="Kirim"
-                    android:textSize="@dimen/lp.ukuranteksinput"
                     android:textColor="@color/white"
+                    android:textSize="@dimen/lp.ukuranteksinput"
                     android:textStyle="bold"
                     app:cornerRadius="8dp" />
                 <TextView
@@ -99,6 +100,17 @@
                     android:gravity="right"
                     android:textColor="@color/red"
                     android:textStyle="italic"/>
+                <TextView
+                    android:id="@+id/lpassxtxtcekemail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginHorizontal="10dp"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Silahkan cek E-Mail yang telah terkirim ke @"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textStyle="bold" />
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/lpassxcodeb"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -119,7 +131,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Masukkan Kode"
-                        android:maxLength="20"
+                        android:maxLength="8"
                         android:inputType="number"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
