--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,7 +42,8 @@
                 android:orientation="vertical"
                 android:paddingLeft="@dimen/lp.ukuranpaddinginput"
                 android:paddingRight="@dimen/lp.ukuranpaddinginput"
-                app:layout_constraintBottom_toTopOf="@id/frxlinearbutton"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@id/frxlinearverify"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/frxcardlayouttop">
@@ -51,12 +52,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="20dp"
-                    android:fontFamily="@font/be_vietnam_extrabold"
+                    android:fontFamily="@font/inter_bold"
                     android:text="Buat Akun Baru"
                     android:textColor="@color/dark_blue"
                     android:textSize="@dimen/lp.ukuranfonttombol"
                     android:textStyle="bold" />
-
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
@@ -65,7 +65,6 @@
                     app:boxBackgroundMode="outline"
                     app:boxStrokeColor="@color/dark_blue"
                     app:passwordToggleTint="@color/teal_200">
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/rpxnama"
                         android:layout_width="match_parent"
@@ -73,13 +72,12 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Nama Lengkap"
-                        android:maxLength="20"
+                        android:maxLength="30"
                         android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
                         android:textSize="@dimen/lp.ukuranteksinput" />
                 </com.google.android.material.textfield.TextInputLayout>
-
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
@@ -88,7 +86,6 @@
                     app:boxBackgroundMode="outline"
                     app:boxStrokeColor="@color/dark_blue"
                     app:passwordToggleTint="@color/teal_200">
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/rpxalamat"
                         android:layout_width="match_parent"
@@ -96,13 +93,12 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Alamat"
-                        android:maxLength="30"
+                        android:maxLength="100"
                         android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
                         android:textSize="@dimen/lp.ukuranteksinput" />
                 </com.google.android.material.textfield.TextInputLayout>
-
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
@@ -140,7 +136,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="Username"
-                        android:maxLength="20"
+                        android:maxLength="30"
                         android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
@@ -161,7 +157,7 @@
                         android:drawableLeft="@drawable/usernameicon"
                         android:drawablePadding="10dp"
                         android:hint="E-Mail"
-                        android:maxLength="20"
+                        android:maxLength="30"
                         android:inputType="textEmailAddress"
                         android:textColor="@color/black"
                         android:textColorHint="@color/dark_blue"
@@ -187,6 +183,105 @@
                         android:textColorHint="@color/dark_blue"
                         android:textSize="@dimen/lp.ukuranteksinput" />
                 </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true"
+                    android:visibility="gone"
+                    android:layout_margin="10dp"
+                    app:passwordToggleTint="@color/dark_blue">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/rpxpassword2"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/lp.ukuranmarginbawahinput"
+                        android:drawablePadding="10dp"
+                        android:drawableStart="@drawable/passwordicon"
+                        android:hint="Ketik Ulang Password"
+                        android:maxLength="20"
+                        android:inputType="textPassword"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/dark_blue"
+                        android:textSize="@dimen/lp.ukuranteksinput" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/frxlinearverify"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/lp.ukuranpaddinginput"
+                android:paddingRight="@dimen/lp.ukuranpaddinginput"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@id/frxlinearbutton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/frxlinearinput">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="20dp"
+                    android:fontFamily="@font/inter_bold"
+                    android:text="Verifikasi Akun Anda"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/lp.ukuranfonttombol"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/rpxtxtcekemail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginHorizontal="10dp"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Silahkan cek E-Mail yang telah terkirim ke @"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textStyle="bold" />
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="20dp"
+                    app:boxBackgroundMode="outline"
+                    app:boxStrokeColor="@color/dark_blue"
+                    app:passwordToggleTint="@color/teal_200">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/rpxinputcode"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/lp.ukuranmarginbawahinput"
+                        android:drawableLeft="@drawable/passwordicon"
+                        android:drawablePadding="10dp"
+                        android:hint="Masukkan kode verifikasi 8 digit..."
+                        android:maxLength="8"
+                        android:inputType="number"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/dark_blue"
+                        android:textSize="@dimen/lp.ukuranteksinput" />
+                </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Belum menerima kode verifikasi?"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/frxbtnkirimulang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:fontFamily="@font/inter_semibold"
+                    android:text="Kirim ulang kode"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textStyle="bold" />
             </LinearLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -201,23 +296,48 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
-
                     <Button
                         android:id="@+id/frxbtndaftar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:backgroundTint="@color/dark_blue"
                         android:onClick="rpxDaftar"
-                        android:paddingLeft="@dimen/lp.panjangtombol"
-                        android:paddingTop="@dimen/lp.lebartombol"
-                        android:paddingRight="@dimen/lp.panjangtombol"
-                        android:paddingBottom="@dimen/lp.lebartombol"
-                        android:text="DAFTAR"
+                        android:paddingVertical="10dp"
+                        android:paddingHorizontal="50dp"
+                        android:text="Daftar"
                         android:textColor="@color/white"
                         android:textSize="@dimen/lp.ukuranfonttombol"
                         android:textStyle="bold"
                         app:cornerRadius="50dp" />
-
+                    <Button
+                        android:id="@+id/frxbtnverify"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/dark_blue"
+                        android:onClick="rpxDaftar"
+                        android:paddingVertical="10dp"
+                        android:paddingHorizontal="50dp"
+                        android:text="Verifikasi"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/lp.ukuranfonttombol"
+                        android:textStyle="bold"
+                        app:cornerRadius="50dp"/>
+                    <Button
+                        android:id="@+id/frxbtnkembali"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/red"
+                        android:onClick="rpxDaftar"
+                        android:paddingVertical="10dp"
+                        android:paddingHorizontal="40dp"
+                        android:text="KEMBALI"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/lp.ukuranfonttombol"
+                        android:textStyle="bold"
+                        app:cornerRadius="50dp" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -226,7 +346,6 @@
                         android:text="Anda sudah punya akun?"
                         android:textColor="@color/black"
                         android:textSize="@dimen/lp.ukuranfontdaftar" />
-
                     <TextView
                         android:id="@+id/frxtxtLogin"
                         android:layout_width="wrap_content"
