--- a/app/src/main/res/layout/fragment_splash_selesai.xml
+++ b/app/src/main/res/layout/fragment_splash_selesai.xml
@@ -7,25 +7,215 @@
     android:id="@+id/consanimate"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.SplashSelesaiFragment">
-    <ImageView
-        android:id="@+id/ssfximage"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ssfxconsimage"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ssfxtext"
-        android:src="@drawable/logovincentbiru"/>
-    <TextView
-        android:id="@+id/ssfxtext"
-        android:layout_width="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent">
+        <ImageView
+            android:id="@+id/ssfximage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/ssfxtext"
+            android:src="@drawable/logovincentbiru"/>
+        <TextView
+            android:id="@+id/ssfxtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            app:layout_constraintTop_toBottomOf="@id/ssfximage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="PESANAN SELESAI"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/inter_black"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ssfximage"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/ssfxconsimage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="PESANAN SELESAI"
-        android:textSize="24dp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/inter_semibold"/>
+        app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+            android:id="@+id/ssfxteksjudultrs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/dpxview1"
+            android:text="Rincian Transaksi"
+            android:textSize="@dimen/fh.ukuranteksjudul"
+            android:fontFamily="@font/inter_medium"/>
+        <View
+            android:id="@+id/dpxview1"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/ssfxteksjudultrs"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="#bdbdbd"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ssfxconsinfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/dpxview1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <TextView
+                android:id="@+id/ssfxteks1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/ssfxtxtidtrs"
+                android:text="ID Transaksi : "
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:fontFamily="@font/inter_medium"
+                android:textColor="@color/black"
+                android:textStyle="italic"/>
+            <TextView
+                android:id="@+id/ssfxtxtidtrs"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ssfxteks1"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="TRS0000001"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:fontFamily="@font/inter_medium"
+                android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/ssfxteks2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxteks1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/ssfxtxtsubtotal"
+                android:text="Subtotal : "
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:fontFamily="@font/inter_medium"
+                android:textColor="@color/black"
+                android:textStyle="italic"/>
+            <TextView
+                android:id="@+id/ssfxtxtsubtotal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxteks1"
+                app:layout_constraintStart_toEndOf="@id/ssfxteks2"
+                app:layout_constraintEnd_toStartOf="@+id/ssfxcardsub"
+                android:text="Rp. 200.000"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:fontFamily="@font/inter_medium"
+                android:textColor="@color/black"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ssfxcardsub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxtxtidtrs"
+                app:layout_constraintStart_toEndOf="@id/ssfxtxtsubtotal"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintEnd_toEndOf="parent">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Salin"
+                    android:layout_marginHorizontal="10dp"
+                    android:textSize="@dimen/hp.ukuranteksinfo"
+                    android:textColor="@color/dark_red"
+                    android:fontFamily="@font/inter_medium"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/ssfxteks3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxteks2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/ssfxtxttransfer"
+                android:text="Transfer : "
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:fontFamily="@font/inter_medium"
+                android:textColor="@color/black"
+                android:textStyle="italic"/>
+            <TextView
+                android:id="@+id/ssfxtxttransfer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxteks2"
+                app:layout_constraintStart_toEndOf="@id/ssfxteks3"
+                app:layout_constraintEnd_toStartOf="@id/ssfxcardtf"
+                android:text="Bank BRI"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:fontFamily="@font/inter_medium"
+                android:textColor="@color/black"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/ssfxcardtf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxtxtsubtotal"
+                app:layout_constraintStart_toEndOf="@id/ssfxtxttransfer"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintEnd_toEndOf="parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Salin"
+                android:layout_marginHorizontal="10dp"
+                android:textSize="@dimen/hp.ukuranteksinfo"
+                android:textColor="@color/dark_red"
+                android:fontFamily="@font/inter_medium"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/ssfxbtnuploadimage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxtxttransfer"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/ssfxbtnback"
+                android:text="Upload gambar"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textColor="@color/dark_blue"/>
+            <TextView
+                android:id="@+id/ssfxbtnback"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxbtnuploadimage"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="Kembali"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textColor="@color/dark_red"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
