--- a/app/src/main/res/layout/fragment_riwayat.xml
+++ b/app/src/main/res/layout/fragment_riwayat.xml
@@ -108,6 +108,7 @@
                 android:padding="8dp"
                 android:text="Segarkan"
                 android:textSize="@dimen/hp.ukuranteksinfo"
+                android:visibility="gone"
                 android:textColor="@color/red"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
