--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -25,26 +25,25 @@
             android:textColor="@color/dark_blue"
             android:textStyle="bold"
             android:fontFamily="@font/inter_bold"/>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cariii"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_container"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:padding="10dp"
-            android:background="@drawable/edittext_bg"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="5dp">
-            <TextView
-                android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_view_border"
+            android:hint="Search...">
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:textColorHint="@color/white"
+                app:iconifiedByDefault="false"
+                android:layout_margin="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="5dp"
-                android:drawableLeft="@drawable/searchgreyicon"
-                android:text="Cari"
-                android:textSize="15sp"
-                android:drawablePadding="10dp"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:queryHint="Cari Minuman" />
+        </com.google.android.material.textfield.TextInputLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/fminxconsspinner"
             android:layout_width="match_parent"
