--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -188,7 +188,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:passwordToggleEnabled="true"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:layout_margin="10dp"
                     app:passwordToggleTint="@color/dark_blue">
                     <com.google.android.material.textfield.TextInputEditText
