--- a/app/src/main/res/layout/fragment_splash_selesai.xml
+++ b/app/src/main/res/layout/fragment_splash_selesai.xml
@@ -190,18 +190,30 @@
             </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/ssfxbtnuploadimage"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 app:layout_constraintTop_toBottomOf="@id/ssfxtxttransfer"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/ssfxbtnback"
-                android:text="Upload gambar"
+                app:layout_constraintEnd_toStartOf="@id/ssfxbtnchat"
+                android:text="Upload Gambar"
                 android:gravity="center"
                 android:textSize="20dp"
                 android:textColor="@color/dark_blue"/>
+            <TextView
+                android:id="@+id/ssfxbtnchat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="50dp"
+                app:layout_constraintTop_toBottomOf="@id/ssfxtxttransfer"
+                app:layout_constraintStart_toEndOf="@id/ssfxbtnuploadimage"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="Kirim Chat"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textColor="@color/dark_green"/>
             <TextView
                 android:id="@+id/ssfxbtnback"
                 android:layout_width="wrap_content"
